0.1.20:

* segway: limits the number of jobs dumped into the queuing system at
  once to avoid overloading it
* segway-task: bugfix: won't throw a nested exception when temporary
  files were not created

0.1.19:

* segway: now set CARD_FRAMEINDEX dynamically to allow for
  --split-sequences to change between train and identify
* segway: --num-segs now called --num-labels
* LSF: fix bug related to: now appends to output/error instead of overwriting

0.1.18:

* LSF: now appends to output/error instead of overwriting
* recommit dumpnames.list removal (bugfix)

0.1.17:

* now requires genomedata >= 0.1.6
* remove dumpnames.list
* by default check all jobs every 30 min instead of every 54 min

0.1.16:

* now requires GMTK version 20091016
* segway: a change in the semantics of --trainable-params for
  training. If it is specified and the file exists, then it will be
  used as a parameter file in the first round of training. Before it
  was clobbered (with --clobber), or training was disabled.
* segway: allow multiple sets of parameters with --trainable-params,
  one for each random start. This together with the previous change
  will allow for the easy continuation of a multithread training run.
* segway: changed error text when wrong number of arguments provided
* segway: fixed bug that causes failure in command-line logging during
  identify phase

0.1.15:

* now requires GMTK version 20091016
* segway: more informative error on memory progression failure
* segway: now works on LSF even when LSF_UNIT_FOR_LIMITS has been changed
* segway: add jobname to "queued" diagnostic messages
* segway: log/res_usage.tab becomes log/jobs.tab
* segway: add jobid, jobname to jobs.tab
* segway: eliminate core dumps of jobs in LSF
* segway: make job abnormal error handling more robust
* segway: add log/details.sh to give all details of queued commands
* segway: queue longest jobs first
* segway: changed way GMTK model is specified for speedup