@@ -10,20 +10,29 @@ import sys
 
 from optbuild import Mixin_NoConvertUnderscore, OptionBuilder_ShortOptWithSpace
 
+from .._util import data_filename, KB, MB
+
 NATIVE_SPEC_PROG = (Mixin_NoConvertUnderscore
                     + OptionBuilder_ShortOptWithSpace)() # do not run
 
 # guard space to prevent going over mem_requested allocation
-MEM_GUARD = 0
+MEM_GUARD = 10*MB
+
+BASH_CMD = "bash"
+RES_WRAPPER = "segway-wrapper.sh"
+
+MSG_EDGE = "Edge of memory usage progression reached without success."
 
 class JobError(RuntimeError):
     pass
 
 class _JobTemplateFactory(object):
+    # this might be overridden by a subclass
     set_template_output_error = True
 
     def __init__(self, template, mem_usage_progression, output_filename,
                  error_filename):
+        self.args = template.args
         self.native_spec = template.nativeSpecification
         self.mem_usage_progression = mem_usage_progression
 
@@ -38,18 +47,24 @@ class _JobTemplateFactory(object):
         self.template = template
 
     def __call__(self, trial_index):
+        """
+        returns a job template with the attributes set for the next
+        memory progression step
+        """
         res = self.template
 
         try:
             mem_usage = self.mem_usage_progression[trial_index]
         except IndexError:
-            print >>sys.stderr, "Edge of memory usage progression reached without success."
+            print >>sys.stderr, MSG_EDGE
             print >>sys.stderr, "Check for errors in output/e subdirectory."
             print >>sys.stderr, "See the troubleshooting section of the Segway documentation."
-            raise RuntimeError("Edge of memory usage progression reached without success.")
+            raise RuntimeError(MSG_EDGE)
 
-        self.mem_limit = calc_mem_limit(mem_usage)
+        self.mem_limit = int(mem_usage)
         self.res_req = self.make_res_req(mem_usage)
+
+        res.args = self.make_args()
         res.nativeSpecification = self.make_native_spec()
 
         return res
@@ -57,6 +72,16 @@ class _JobTemplateFactory(object):
     def make_res_req(self, mem_usage):
         # pure virtual function
         raise NotImplementedError
+
+    def make_args(self):
+        """
+        wrap args with segway-wrapper.sh
+        """
+        # ulimit args are in kibibytes
+        mem_limit_kb = calc_mem_limit(self.mem_limit) // KB
+        wrapper_cmdline = [BASH_CMD, data_filename(RES_WRAPPER), mem_limit_kb]
+
+        return wrapper_cmdline + self.args
 
     def make_native_spec(self):
         # pure virtual function
